--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,23 +16,23 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".ChatActivity"
+            android:name="com.example.Chatterly.ChatActivity"
             android:exported="false" />
         <activity
-            android:name=".HomePage"
+            android:name="com.example.Chatterly.HomePage"
             android:exported="false" />
         <activity
-            android:name=".SignUpActivity"
+            android:name="com.example.Chatterly.SignUpActivity"
             android:exported="false" >
 
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name="com.example.Chatterly.LoginActivity"
             android:exported="false">
 
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.Chatterly.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.ChatApp">
